[maven-release-plugin] prepare release ptscontractinfos-1.0

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>teamigo</groupId>
   <artifactId>ptscontractinfos</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
   <name>ptscontractinfos</name>
